--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-redux": "*",
     "react-router-dom": "^5.2.0",
     "redux": "*",
+    "redux-thunk": "^2.3.0",
     "styled-components": "^5.2.1"
   },
   "browserslist": {
